package fr.hb.mlang.electricitybusiness.modules.booking;

public enum BookingStatus {
  PENDING,
  APPROVED,
  REJECTED,
  CANCELLED
}
