package fr.hb.mlang.electricitybusiness.modules.user.domain;

public enum Role {
  USER,
  ADMIN,
  SUPERADMIN
}
